[metadata]
name = PyTechnicalIndicators
version = 1.0.8
url = https://github.com/0100101001010000/PyTechnicalIndicators
author = 0100101001010000
author_email = author@example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Financial and Insurance Industry
description = A simple technical indicator package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
package_dir =
	= src
packages = find:

[options.packages.find]
where = src
